Changed option `SlimRenderer.log_rendering_errors` default from true to false, and changed to raise exception when not logging it. Use a simple script to update gems instead of gradle plugin. Updated gems:  slim-5.1.1, temple-0.10.2, tilt-2.2.0